(feature) Backend: add dockerfile for the backend.

--- a/library-system-backend/src/main/resources/application.properties
+++ b/library-system-backend/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 nytimes.api.key=QC6sFSuubRlnVGAsDjTJm9rmDJbTMCFq
 logging.level.org.springframework.web.cors=DEBUG
 spring.devtools.restart.enabled=true
+server.port=8080
+debug=true
