--- a/library-system-backend/build.gradle
+++ b/library-system-backend/build.gradle
@@ -1,14 +1,19 @@
 plugins {
 	id 'org.springframework.boot' version '2.5.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id "org.jetbrains.kotlin.jvm" version "1.4.32"
-	id "org.jetbrains.kotlin.plugin.spring" version "1.4.32"
-	id "org.jetbrains.kotlin.kapt" version "1.4.32"
+	id "org.jetbrains.kotlin.jvm" version "1.5.21"
+	id "org.jetbrains.kotlin.plugin.spring" version "1.5.21"
+	id "org.jetbrains.kotlin.kapt" version "1.5.21"
+	id "com.google.cloud.tools.jib" version "3.0.0"
 }
+
+
+//apply from: "gradle/docker.gradle"
 
 group = "com.mimecast"
 version = "0.0.1-SNAPSHOT"
 java.sourceCompatibility = JavaVersion.VERSION_11
+
 
 repositories {
 	mavenCentral()
