--- a/library-system-frontend/package.json
+++ b/library-system-frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-select/ng-select": "^12.0.4",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
